# YT_Video_Translation_Openai

./: .gitignore  Dockerfile  README.md  check_requirements.py  env.template  example_usage.py  main.py  project_summary.py  pyproject.toml  requirements.txt  run_gui.py  video_translator_gui.py
.github/workflows/: docker-publish.yml
workflow/: app.py
